# flower

./: .dockerignore  .env.example  .env.production.example  .gitignore  AUDIT_REPORT.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/apps/alerts/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/alerts/migrations/: 0001_initial.py
backend/apps/audit/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/audit/admin/: README.md  __init__.py
backend/apps/audit/api/: urls.py
backend/apps/audit/domain/: README.md  constants.py  enums.py  policies.py
backend/apps/audit/events/: README.md
backend/apps/audit/migrations/: 0001_initial.py  0002_initial.py
backend/apps/audit/models/: README.md  audit_log.py
backend/apps/audit/selectors/: README.md
backend/apps/audit/services/: README.md
backend/apps/audit/tasks/: README.md
backend/apps/automation/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/billing/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/billing/admin/: README.md
backend/apps/billing/api/: urls.py
backend/apps/billing/domain/: README.md  constants.py  enums.py  policies.py
backend/apps/billing/events/: README.md
backend/apps/billing/models/: README.md  event.py  invoice.py  subscription.py  subscription_plan.py
backend/apps/billing/providers/: __init__.py  base.py  mock.py  stripe_provider.py
backend/apps/billing/selectors/: README.md
backend/apps/billing/services/: README.md
backend/apps/billing/tasks/: README.md
backend/apps/care_engine/: apps.py  translation.py
backend/apps/care_engine/admin/: README.md  __init__.py
backend/apps/care_engine/api/: urls.py
backend/apps/care_engine/domain/: README.md  constants.py  enums.py  policies.py  rule_codes.py  thresholds.py
backend/apps/care_engine/events/: README.md
backend/apps/care_engine/migrations/: 0001_initial.py  0002_rule.py
backend/apps/care_engine/models/: README.md  __init__.py  plant_species.py  rule.py
backend/apps/care_engine/selectors/: README.md
backend/apps/care_engine/services/: README.md  __init__.py  metric_evaluator.py  rule_evaluation_service.py
backend/apps/care_engine/tasks/: README.md
backend/apps/core/: celery.py  models.py  views.py
backend/apps/core/logging/: __init__.py  api_logger.py  json_formatter.py
backend/apps/core/metrics/: __init__.py
backend/apps/core/middleware/: request_context.py
backend/apps/core/services/: __init__.py  runtime_health_service.py
backend/apps/core/tests/: test_ci_guards.py  test_health.py
backend/apps/devices/: admin.py  apps.py  auth.py  events.py  forms.py  models.py  platform_views.py  selectors.py  services.py  web_urls.py
backend/apps/devices/admin/: README.md  __init__.py
backend/apps/devices/api/: urls.py
backend/apps/devices/domain/: README.md  constants.py  enums.py  policies.py  state_machine.py
backend/apps/devices/events/: README.md  __init__.py
backend/apps/devices/migrations/: 0001_initial.py  0002_device_activated_at_device_provisioned_at.py  0003_deviceheartbeat_deviceshadow_and_more.py  0004_provisioningauditentry.py  0005_devicedomainevent.py
backend/apps/devices/models/: README.md  __init__.py  device.py  device_shadow.py  domain_event.py  provisioning_audit.py
backend/apps/devices/selectors/: README.md
backend/apps/devices/services/: README.md  __init__.py  event_subscribers.py  mqtt_acl_service.py  provisioning_service.py
backend/apps/devices/tasks/: README.md
backend/apps/devices/tests/: test_device_control_plane.py  test_event_bus.py
backend/apps/firmware/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/identity/: apps.py
backend/apps/identity/admin/: README.md  __init__.py
backend/apps/identity/api/: urls.py
backend/apps/identity/domain/: enums.py  (+3 more)
backend/apps/integrations/: apps.py
backend/apps/locations/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/marketplace/: apps.py
backend/apps/notifications/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/planters/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/plants/: admin.py  apps.py  events.py  models.py  selectors.py  services.py  translation.py
backend/apps/pots/: apps.py
backend/apps/provider_ops/: apps.py
backend/apps/tasks/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/telemetry/: admin.py  apps.py  events.py  models.py  selectors.py  serializers.py  services.py  views.py
backend/apps/tenancy/: apps.py  forms.py  views.py  web_urls.py
backend/apps/tenants/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/apps/users/: admin.py  apps.py  events.py  models.py  selectors.py  services.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/docs/: INDEX.md
backend/docs/architecture/: DDD_OVERVIEW.md  FRONTEND_BOUNDARIES.md  IOT_INGEST.md  MULTI_TENANCY.md
backend/docs/governance/: AUDIT_CHECKLIST.md  RULES.md
backend/static/: README.md
backend/static/css/: flower-ui.css  plantops-ui.css
backend/templates/: app_base.html  base.html
backend/templates/dashboard/: index.html
backend/templates/devices/: platform_fleet.html  platform_provision.html
backend/templates/marketing/: platform_home.html
backend/templates/partials/: sidebar.html  status_badge.html  topbar.html  ui_feedback.html
backend/templates/tenancy/: layout.html  tenant_form.html  tenant_list.html
backend/templates/ui_kit/: README.md  index.html
backend/tests/: conftest.py  test_b2b_http_hmac.py  test_iot_ingest_foundation.py  test_outbox_pipeline.py  test_owner_outbound_b2b.py  test_provider_b2b_api.py  test_provider_key_lifecycle.py  test_service_layer_rules.py  test_startup.py  test_sync_engine.py  test_tenant_foundation.py  test_tenants.py
(+459 files in other folders)
