[project]
name = "flower"
version = "0.1.0"
description = "Flower - multi-tenant SaaS for plant care, IoT monitoring, provider operations, and marketplace workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Flower Engineering", email = "engineering@flower.local" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # -----------------------------------------------------------------------
    # Django Core
    # -----------------------------------------------------------------------
    "django>=5.0,<5.2",
    "django-tenants>=3.6.1",
    "django-cors-headers>=4.4.0",
    "django-htmx>=1.19.0",
    "django-modeltranslation>=0.19.9",
    "django-celery-beat>=2.7.0",

    # -----------------------------------------------------------------------
    # Django REST Framework & API Documentation
    # -----------------------------------------------------------------------
    "djangorestframework>=3.15.2",
    "django-filter>=24.3",
    "drf-spectacular>=0.27.2",

    # -----------------------------------------------------------------------
    # Celery & Message Queue
    # -----------------------------------------------------------------------
    "celery>=5.4.0",
    "redis>=5.0.8",

    # -----------------------------------------------------------------------
    # PostgreSQL
    # -----------------------------------------------------------------------
    "psycopg[binary]>=3.2.1",

    # -----------------------------------------------------------------------
    # Environment & Configuration
    # -----------------------------------------------------------------------
    "environs>=11.0.0",
    "python-dotenv>=1.0.1",

    # -----------------------------------------------------------------------
    # Security
    # -----------------------------------------------------------------------
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",

    # -----------------------------------------------------------------------
    # Utilities
    # -----------------------------------------------------------------------
    "pillow>=10.4.0",
    "structlog>=24.4.0",

    # -----------------------------------------------------------------------
    # WSGI Server
    # -----------------------------------------------------------------------
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    # -----------------------------------------------------------------------
    # Testing
    # -----------------------------------------------------------------------
    "pytest>=8.3.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=26.0.0",

    # -----------------------------------------------------------------------
    # Linting & Formatting
    # -----------------------------------------------------------------------
    "ruff>=0.6.0",

    # -----------------------------------------------------------------------
    # Type Checking
    # -----------------------------------------------------------------------
    "django-stubs[compatible-mypy]>=5.0.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15.0",

    # -----------------------------------------------------------------------
    # Pre-commit
    # -----------------------------------------------------------------------
    "pre-commit>=3.8.0",

    # -----------------------------------------------------------------------
    # Debugging
    # -----------------------------------------------------------------------
    "django-debug-toolbar>=4.4.0",
    "ipdb>=0.13.13",
]

[project.scripts]
manage = "manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

# =============================================================================
# Ruff — Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "staticfiles",
    "media",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D106",  # Missing docstring in public nested class
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests", "apps"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["apps", "config"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
    "config/celery.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Django Stubs / Mypy
# =============================================================================
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.test"
